# test_npo_colibry_qml

./: CMakeLists.txt  Main.qml  MyCalculateButton.qml  MyCalculator.qml  README.md  calculator.h  controller.h  enums.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pow.h  rational.h  resources.qrc
